--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "sass-bootstrap": "~3.0.0",
     "modernizr": "~2.6.2",
-    "jquery": ">=2.0",
+    "jquery": "~1.9",
     "pviz": "*",
     "threejs": "*"
   },
